runtime-with-instruments/test run with truffle-compiler